# ai_organizational_changes

./: .gitignore  BEGINNERS_GUIDE.md  CHANGELOG.md  README.md  jobs.txt  json_to_excel_converter.py  pyproject.toml
src/ai_organizational_changes/: __init__.py  init_model.py  main.py  model.py
