[project]
name = "ai-organizational-changes"
version = "3.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marc Fabian Mezger", email = "57255687+mfmezger@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic-ai>=1.0.10",
    "python-dotenv>=1.1.1",
    "tenacity>=8.0.0",
    "tqdm>=4.66.0",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
ai-organizational-changes = "ai_organizational_changes:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
